[레거시 코드 리팩터링 - 2단계] 연어(황재현) 미션 제출합니다. (#582)
* refactor: JdbcTemplate -> JPA로 변경, DTO 클래스 추가

* refactor: Product 도메인 내부로 금액 검증 로직 이동

* feat: 상품 이름 검증 기능 추가

* refactor: Menu가 MenuProduct를 생성하도록 변경

* refactor: MenuService 로직 도메인 내부로 이동

* refactor: MenuService 로직 ProductService, MenuGroupService로 이동

* refactor: MenuProduct DTO 사용

* build: osiv 끄기

* fix: Request DTO들에 default 생성자 추가

* refactor: 도메인 간의 연관 관계 추가, 영속성 전이 적용

* refactor: Price Wrapper 클래스 생성

* refactor: DTO 사용하도록 변경

* refactor: Order에서 OrderTable 직접 참조 하도록 변경

* refactor: MenuProduct에서 Product를 직접 참조하도록 변경

* style: 갯수 -> 개수로 변경